[gd_scene load_steps=11 format=2]

[ext_resource path="res://MAIN/sprites/other/TestPlayer.png" type="Texture" id=1]
[ext_resource path="res://MAIN/sprites/sounds/shotgun-reload-old_school-RA_The_Sun_God-580332022.wav" type="AudioStream" id=2]
[ext_resource path="res://MAIN/LeftHand.gd" type="Script" id=3]
[ext_resource path="res://MAIN/Player.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53.9741, 55.6406 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 21.1032
height = 95.8401

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 60.9458, 44.8244 )

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BodyRig/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyRig/Head/RightHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -59.5, 41.4507 ), Vector2( -64.4894, 40.8648 ), Vector2( -59.5, 41.451 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyRig/Head/RightHand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyRig/LeftHand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 30, 34 ), Vector2( 36.0236, 37.9622 ), Vector2( 30, 34 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BodyRig/LeftHand:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("BodyRig/LeftHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -94.4, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 65.8457, 75.9834 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( -59.5, 41.4507 )
collision_layer = 2
collision_mask = 8193
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -26.5368, 24.3919 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -20.4016, 103.053 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="BodyRig" type="Node2D" parent="."]
position = Vector2( -26.5368, 24.3919 )

[node name="pickgun" type="AudioStreamPlayer2D" parent="BodyRig"]
stream = ExtResource( 2 )
volume_db = -0.692
pitch_scale = 1.57

[node name="LeftHand" type="Sprite" parent="BodyRig"]
position = Vector2( 30, 34 )
texture = ExtResource( 1 )
offset = Vector2( 30, 0 )
region_enabled = true
region_rect = Rect2( 144.638, 73.7307, 50.5465, 42.6598 )
script = ExtResource( 3 )

[node name="buttons_timer" type="Timer" parent="BodyRig/LeftHand"]

[node name="Head" type="Sprite" parent="BodyRig"]
texture = ExtResource( 1 )
offset = Vector2( -10, 0 )
region_enabled = true
region_rect = Rect2( 40.0175, 11.2639, 99.6214, 106.036 )

[node name="RightHand" type="Sprite" parent="BodyRig/Head"]
position = Vector2( -59.5, 41.4507 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 19.5267, 218.862, 49.1126, 50.905 )

[node name="GunStorage" type="Node2D" parent="BodyRig/Head"]
position = Vector2( -75.5362, 1.90735e-06 )
rotation = 1.5708

[node name="RightLeg" type="Sprite" parent="BodyRig"]
position = Vector2( -21.7747, 86.6355 )
rotation = 0.424115
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 51.432, 136.466, 41.9429, 46.2447 )

[node name="LeftLeg" type="Sprite" parent="BodyRig"]
position = Vector2( 46.3291, 86.6355 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 108.687, 134.449, 46.6416, 42.0912 )

[node name="GunDetector" type="Area2D" parent="BodyRig"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyRig/GunDetector"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 6.13518, 53 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 4 )
anims/changegun = SubResource( 5 )

[node name="VehicleDetector" type="Area2D" parent="."]
position = Vector2( -26.5368, 37.3919 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VehicleDetector"]
visible = false
modulate = Color( 0.278431, 0.584314, 0.164706, 1 )
position = Vector2( 6.13518, 11.0233 )
shape = SubResource( 6 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Tween" type="Tween" parent="."]
[connection signal="area_entered" from="BodyRig/GunDetector" to="BodyRig/LeftHand" method="_on_GunDetector_area_entered"]
[connection signal="area_exited" from="BodyRig/GunDetector" to="BodyRig/LeftHand" method="_on_GunDetector_area_exited"]
[connection signal="area_entered" from="VehicleDetector" to="." method="_on_VehicleDetector_area_entered"]
[connection signal="area_exited" from="VehicleDetector" to="." method="_on_VehicleDetector_area_exited"]
